<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_activity_daftar">Daftar Film</string>
    <string name="title_activity_detail">Detail Film</string>
    <string name="favorite">Favorite</string>
    <!-- Strings used for fragments for navigation -->
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="search">cari</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date_release">Date Release</string>
    <string name="bagikan">Bagikan</string>
    <string name="actor">Actor</string>
    <string name="id">Id</string>
    <string name="random">Random</string>
    <string name="search_hint">Masukkan Judul</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>